# scrape-cineco

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: scrape.yaml
scripts/: dev-setup.sh
src/scrape_cineco/: __init__.py  __main__.py  _settings.py  _utils.py
